FKS-268: Add missing relationship assignment_scope to accept multiple scopes for a user. Changes fix problems that users cannot have multiple orgunits.